--- a/src/assets/scss/partials/_LoanSection.scss
+++ b/src/assets/scss/partials/_LoanSection.scss
@@ -20,7 +20,9 @@
       flex: auto;
       justify-content: center;
       align-items: center;
-      margin-top: 60px;
+      margin-top: 100px;
+      padding: 0px 72px;
+      margin-bottom: 36px;
 
       .Loan_Agree_horizontal_line {
         background-color: #D1D5DB;
