--- a/src/assets/scss/partials/_home.scss
+++ b/src/assets/scss/partials/_home.scss
@@ -703,7 +703,7 @@ body {
   }
 
   .ExploreNews_BoxOne img {
-    height: 300px !important;
+    // height: 300px !important;
   }
 
   .overlay {
@@ -1203,7 +1203,9 @@ transition: all 0.5s ease!important;
 }
 
 .exp-home-news {
-  width: 87%;
+  gap: 36px;
+  padding: 0 150px;
+  // width: 87%;
 }
 
 .text-justify {
@@ -1427,7 +1429,7 @@ transition: all 0.5s ease!important;
     }
 
     .exp-home-news {
-      width: 84% !important;
+      // width: 84% !important;
     }
   }
 
